cambios en home

--- a/SASS/_navbar.scss
+++ b/SASS/_navbar.scss
@@ -15,8 +15,9 @@
     }
     
     li.nav-item.dropdown{
+      
       display: flex;      
-      background-color: $grey;      
+      background-color: none;      
       padding: 0;
       margin: 0;      
       width: auto;
