--- a/SASS/Estilos.css
+++ b/SASS/Estilos.css
@@ -37,29 +37,7 @@
   background-repeat: no-repeat;
 }
 
-@media screen and (max-width: 576px) {
-  .form-inline {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -ms-flex-wrap: nowrap;
-        flex-wrap: nowrap;
-  }
-  .col-sm-4 {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal !important;
-    -webkit-box-direction: normal !important;
-        -ms-flex-direction: row !important;
-            flex-direction: row !important;
-    width: 80%;
-    padding-top: 4vw;
-  }
+@media screen and (max-width: 300px) {
   .row {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -71,36 +49,28 @@
     -ms-flex-pack: distribute;
         justify-content: space-around;
     width: 100%;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding-top: 6vw;
   }
-  .main .main__footer {
-    display: -webkit-inline-box;
-    display: -ms-inline-flexbox;
-    display: inline-flex;
+  .form-inline {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
-    -webkit-box-pack: space-evenly;
-        -ms-flex-pack: space-evenly;
-            justify-content: space-evenly;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
   }
-  .main .main__footer p {
-    padding: 0;
+  .col-sm-7 {
     width: 80%;
   }
-  .footer__logoPieDePagina {
-    height: 50px;
-  }
-  .mapa__iframe {
+  .informacion__jumbotron {
+    height: auto;
     width: 100%;
-  }
-  .container__mapa {
-    width: 100%;
-  }
-  .main__containerNosotros2 {
-    width: 100%;
-  }
-  .nav-item .dropdown {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -108,54 +78,509 @@
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    color: black;
+    padding-bottom: 5vw;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding-top: 2vw;
+  }
+  .jumbotron__button {
+    width: auto;
+  }
+  .col-sm-4 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 100%;
+    padding-top: 4vw;
+  }
+  .main .jumbotron__button {
+    font-size: 2.55vw;
+    width: auto;
+  }
+  .main .informacion__jumbotron h1 {
+    font-size: 13.5vw;
+  }
+  .main .informacion__jumbotron p {
+    font-size: 6.63vw;
+  }
+  .main .container__footer {
+    height: auto;
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+    background-color: #170080;
     -webkit-box-pack: start;
         -ms-flex-pack: start;
             justify-content: flex-start;
-    width: 10%;
+    padding-left: 5vw;
+    padding-top: 5vw;
+    padding-bottom: 4vw;
+    font-size: 5em;
   }
-  .nav-item .dropdown-menu.show {
+  .main .container__footer .info__nombre h3 {
+    font-size: 3.4425vw;
+  }
+  .main .container__footer .info__texto
+p {
+    padding-left: 2vw;
+  }
+  .main .container__footer .redesSociales__logos {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    width: auto;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .main .container__footer .navbar__logo {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    height: 25%;
+    width: 25%;
+    border-radius: 100%;
+  }
+}
+
+@media screen and (min-width: 300px) and (max-width: 575px) {
+  .row {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    width: 100%;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding-top: 6vw;
   }
-  .nav-item a.nav-link {
-    color: #000;
+  .form-inline {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
   }
-  .main .jumbotron__texto {
-    width: 80%;
+  .informacion__jumbotron {
+    height: auto;
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    color: black;
+    padding-bottom: 5vw;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding-top: 2vw;
+  }
+  .jumbotron__button {
+    width: auto;
+  }
+  .col-sm-7 {
+    max-width: 80%;
+  }
+  .col-sm-4 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 100%;
+    padding-top: 4vw;
+  }
+  .main .jumbotron__button {
+    font-size: 2.55vw;
+    width: auto;
+  }
+  .main .informacion__jumbotron h1 {
+    font-size: 4.5vw;
+  }
+  .main .informacion__jumbotron p {
+    font-size: 3.1875vw;
+  }
+  .main .container__footer {
+    height: auto;
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+    background-color: #170080;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    padding-left: 5vw;
+    padding-top: 5vw;
+    padding-bottom: 4vw;
+    font-size: 5em;
+  }
+  .main .container__footer .info__nombre h3 {
+    font-size: 3.4425vw;
+  }
+  .main .container__footer .info__texto
+p {
+    padding-left: 2vw;
+  }
+  .main .container__footer .redesSociales__logos {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .main .container__footer .navbar__logo {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    height: 22%;
+    width: 22%;
+    border-radius: 100%;
+  }
+}
+
+@media screen and (min-width: 576px) and (max-width: 991px) {
+  .row {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    width: 100%;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding-top: 6vw;
+  }
+  .col-sm-7 {
+    max-width: 80%;
+  }
+  .col-sm-4 {
+    padding-top: 2vw;
+    width: 100%;
+    max-width: 100%;
+  }
+  .informacion__jumbotron {
+    height: auto;
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    color: black;
+    padding-bottom: 1vw;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding-top: 2vw;
+  }
+  .main .jumbotron__button {
+    font-size: 2.55vw;
+    width: auto;
+  }
+  .main .informacion__jumbotron h1 {
+    font-size: 4.5vw;
+  }
+  .main .informacion__jumbotron p {
+    font-size: 3.315vw;
+  }
+  .main .container__footer {
+    height: auto;
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+    background-color: #170080;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    padding-left: 5vw;
+    padding-top: 5vw;
+    padding-bottom: 4vw;
+    font-size: 5em;
+  }
+  .main .container__footer .info__nombre h3 {
+    font-size: 3.4425vw;
+  }
+  .main .container__footer .info__texto
+p {
+    padding-left: 2vw;
+  }
+  .main .container__footer .redesSociales__logos {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .main .container__footer .navbar__logo {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    height: 14%;
+    width: 14%;
+    border-radius: 100%;
+  }
+}
+
+@media screen and (min-width: 992px) and (max-width: 1199px) {
+  .row {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    width: 100%;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding-top: 6vw;
+  }
+  .col-sm-7 {
+    max-width: 80%;
+  }
+  .col-sm-4 {
+    padding-top: 2vw;
+    width: 100%;
+    max-width: 100%;
+  }
+  .informacion__jumbotron {
+    height: auto;
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    color: black;
+    padding-bottom: 5vw;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding-top: 2vw;
+  }
+  .main img {
+    height: 100%;
+    width: 100%;
+  }
+  .main .jumbotron__button {
+    font-size: 2.55vw;
+    width: auto;
+  }
+  .main .informacion__jumbotron h1 {
+    font-size: 4.5vw;
+  }
+  .main .informacion__jumbotron p {
     font-size: 1.275vw;
   }
-}
-
-@media screen and (min-width: 768px) {
-  .container {
-    width: 720px;
+  .main .container__footer {
+    height: auto;
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+    background-color: #170080;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    padding-left: 5vw;
+    padding-top: 5vw;
+    padding-bottom: 4vw;
+    font-size: 5em;
   }
-}
-
-@media screen and (min-width: 992px) {
-  .container {
-    width: 960px;
+  .main .container__footer .info__nombre h3 {
+    font-size: 3.4425vw;
+  }
+  .main .container__footer .info__texto
+p {
+    padding-left: 2vw;
+  }
+  .main .container__footer .redesSociales__logos {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .main .container__footer .navbar__logo {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    height: 12%;
+    width: 12%;
+    border-radius: 100%;
   }
 }
 
 @media screen and (min-width: 1200px) {
-  .container {
-    width: 1140px;
+  .row {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    width: 100%;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
-}
-
-@media screen and (min-width: 1400px) {
-  .container {
-    width: 1320px;
+  .col-sm-5 {
+    width: 80%;
+  }
+  .col-sm-4 {
+    padding-top: 2vw;
+    width: 100%;
+    max-width: 100%;
+  }
+  .informacion__jumbotron {
+    height: auto;
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    color: black;
+    padding-bottom: 5vw;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding-top: 2vw;
+  }
+  .main img {
+    height: 100%;
+    width: 100%;
+  }
+  .main .jumbotron__button {
+    font-size: 1.275vw;
+    width: auto;
+  }
+  .main .informacion__jumbotron h1 {
+    font-size: 2.25vw;
+  }
+  .main .informacion__jumbotron p {
+    font-size: 1.275vw;
+  }
+  .main .container__footer {
+    height: auto;
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+    background-color: #170080;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    padding-left: 5vw;
+    padding-top: 5vw;
+    padding-bottom: 4vw;
+    font-size: 1vw;
+  }
+  .main .container__footer .info__nombre h3 {
+    font-size: 3.4425vw;
+  }
+  .main .container__footer .info__texto
+p {
+    padding-left: 2vw;
+  }
+  .main .container__footer .redesSociales__logos {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .main .container__footer .navbar__logo {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    height: 10%;
+    width: 10%;
+    border-radius: 100%;
   }
 }
 
@@ -204,6 +629,7 @@
 
 .main .row {
   margin: 0;
+  padding-bottom: 8vw;
 }
 
 .main .col-sm-7 {
@@ -223,10 +649,6 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
   -ms-flex-line-pack: stretch;
       align-content: stretch;
   -webkit-box-pack: space-evenly;
@@ -269,7 +691,7 @@
   padding-top: 8vw;
   padding-bottom: 2vw;
   width: 100%;
-  background-color: #dddddd;
+  background-color: whitesmoke;
   margin-bottom: 2vw;
   padding-left: 2vw;
 }
@@ -309,9 +731,8 @@
       -ms-flex-pack: center;
           justify-content: center;
   background-color: #1d83e9;
-  width: 8vw;
   height: auto;
-  border-radius: 1vw;
+  width: auto;
   margin-bottom: 1vw;
 }
 
@@ -321,65 +742,39 @@
 }
 
 .main .main__section4 {
-  border: 3px #170080 solid;
-  background-color: #dddddd;
+  background-color: whitesmoke;
   margin-bottom: 2vw;
   padding-left: 2vw;
   height: 16vw;
 }
 
 .main .container__footer {
+  background-color: #170080;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   width: 100%;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
-  padding-left: 10em;
-  padding-right: 5em;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-left: 2vw;
 }
 
 .main .container__footer p {
+  color: whitesmoke;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
 .main .footer__info {
+  color: whitesmoke;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 50%;
-}
-
-.main .redesSociales__logos {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
-  padding-top: 1vw;
-  width: 1em;
-}
-
-.main .redesSociales__logos ul {
-  list-style: none;
-}
-
-.main .redesSociales__logos li {
-  height: 60%;
-}
-
-.main .redesSociales__logos .main .footer__redesSociales a {
-  color: black;
 }
 
 .main .linksRedes {
@@ -422,6 +817,12 @@
   list-style: none;
   color: black;
   padding: 1vw;
+}
+
+.main .footer__barra {
+  height: 0.4vw;
+  background-color: #1d83e9;
+  width: 100%;
 }
 
 .main .main__tecnicas1 {
@@ -470,7 +871,7 @@
           justify-content: center;
   width: 100%;
   padding-bottom: 4vw;
-  background-color: #dddddd;
+  background-color: whitesmoke;
 }
 
 .main .tecnicas1__table {
@@ -541,8 +942,7 @@
 }
 
 .main .main__container {
-  border: 3px #170080 solid;
-  background-color: #dddddd;
+  background-color: whitesmoke;
 }
 
 .main .item {
@@ -575,7 +975,7 @@
   margin-left: 2vw;
   margin-top: 0.4vw;
   margin-bottom: 2vw;
-  background-color: #dddddd;
+  background-color: whitesmoke;
 }
 
 .main .container__mapa {
@@ -1133,7 +1533,7 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  background-color: #dddddd;
+  background-color: none;
   padding: 0;
   margin: 0;
   width: auto;
