--- a/SASS/_main.scss
+++ b/SASS/_main.scss
@@ -30,6 +30,7 @@
 
     .row{
         margin: 0;
+        padding-bottom: $spacing-lg*4;
     }
 
     
@@ -43,8 +44,7 @@
 
     .row{
     padding-top: 5em;    
-    display: flex;
-    flex-direction: row;
+    display: flex;    
     align-content: stretch;
     justify-content: space-evenly;
     align-items: center;
@@ -70,13 +70,14 @@
         padding-top: $spacing-lg*4;     
         padding-bottom: $spacing-lg;
         width: $full-width;
-        background-color: $grey;
+        background-color: $white;
         margin-bottom: $spacing-lg;
         padding-left: $spacing-lg ;
     }
 
     .main__informacion h1 , p{
         color: $black;
+        
     }
 
     .informacion__jumbotron{
@@ -86,6 +87,7 @@
         flex-direction: column;        
         color: $black;
         padding-bottom: $spacing;
+        
 
     }
 
@@ -102,10 +104,9 @@
     .jumbotron__button{
         display: flex;
         justify-content: center;
-        background-color: $blue-light;
-        width: 8vw;
+        background-color: $blue-light;        
         height: auto;
-        border-radius: $spacing;
+        width: auto;        
         margin-bottom: $spacing;
     }
 
@@ -114,9 +115,8 @@
             width: 100%;
     }
 
-    .main__section4{
-        border: $border1;
-        background-color: $grey;
+    .main__section4{        
+        background-color: $white;
         margin-bottom: $spacing-lg;
         padding-left: $spacing-lg ;
         height: $spacing-lg*8;
@@ -125,43 +125,29 @@
     }
 
     
-    .container__footer{
+    .container__footer{        
+        background-color: $blue-dark;
         display: flex;
         width: $full-width;
-        justify-content: space-around;       
-        align-items: flex-end;
-        padding-left: 10em;
-        padding-right: 5em;
+        justify-content: space-between;       
+        align-items: center;
+        padding-left: $spacing-lg;   
+        
+        
             p{
+                color: $white;
                 display: flex;
 
             }
-
+         
 
     }
         .footer__info{
-            display: flex;
-            width: 50%;
+            color: $white;
+            display: flex;            
         }
-
-    .redesSociales__logos{
-        display: flex;
-        flex-direction: row;
-        align-items: flex-end;
-        padding-top: $spacing;
-        width: 1em;
-            ul{
-                list-style: none;
-            }
-            li{
-                height: 60%;
-            }
-            .main .footer__redesSociales a{
-                color: black;
-                
-            }
-
-    } 
+    
+    
     
     .linksRedes{
         display: flex;
@@ -191,7 +177,12 @@
         }
     }
 
-    
+    .footer__barra{
+        height: $spacing-sm;
+        background-color: $blue-light;
+        width: $full-width;
+        
+    }
         
 
     
@@ -236,7 +227,7 @@
         justify-content: center;
         width: $full-width;
         padding-bottom: $spacing-lg*2;
-        background-color: $grey;
+        background-color: $white;
     }
 
     .tecnicas1__table {
@@ -302,8 +293,8 @@
 
 /* Inicio seccion ubicacion */
 .main__container {    
-    border: $border1;    
-    background-color: $grey;
+        
+    background-color: $white;
     
 }
 
@@ -335,7 +326,7 @@
     margin-left: $spacing-lg;
     margin-top: $spacing-sm;
     margin-bottom: $spacing-lg;
-    background-color: $grey;
+    background-color: $white;
 
 }
 
