--- a/SASS/_mediaQueries.scss
+++ b/SASS/_mediaQueries.scss
@@ -1,100 +1,427 @@
-@media screen and (max-width: 576px) {
+@media screen and (max-width: 300px)  {
+    .row{
+        
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        width: 100%;
+        align-items: center;
+        padding-top: $spacing-lg*3;
+    }
     .form-inline {
         display: flex;
         flex-direction: row;
         flex-wrap: nowrap;
+    }    
+    .col-sm-7{
+        width: 80%;
+    }
+
+    .informacion__jumbotron{
+        height: auto;
+        width: 100%;
+        display: flex;
+        flex-direction: column;        
+        color: $black;
+        padding-bottom: $spacing*5;
+        align-items: center;
+        padding-top: $spacing-lg;
+        
+
+    }
+
+    .jumbotron__button{
+        width: auto;
     }
 
     .col-sm-4{
 
         display: flex;
-        flex-direction: row !important;
-        width: 80%;
-        padding-top: $spacing-lg*2;       
+        flex-direction:column;
+        width: 100%;
+        padding-top: $spacing-lg*2;        
+    }
+    .main .jumbotron__button{        
+        font-size: $f-large*2;    
+        width: auto;   
     }
 
+    .main .informacion__jumbotron{
+        h1{font-size: $f-title*3;}
+        p{font-size: $f-large*5.2;}
+    }
+
+    .main .container__footer{
+        height: auto;
+        width: $full-width;
+        display: flex; 
+        flex-direction: column;                    
+        align-items: flex-end;        
+        background-color: $blue-dark;        
+        justify-content: flex-start;
+        padding-left: $spacing-lg*2.5;   
+        padding-top: $spacing-lg*2.5;  
+        padding-bottom: $spacing-lg*2;   
+        font-size: 5em;      
+        
+            .info__nombre h3{
+                font-size: $f-large*2.7;
+            }
+            .info__texto 
+           
+                p{                                       
+                padding-left: $spacing-lg;
+                
+            }
+
+    .redesSociales__logos{
+        display: flex;
+        flex-direction: row;
+    }       
+    .navbar__logo{
+        display: flex;
+        height: 25%;
+        width: 25%;
+        border-radius: 100%;
+
+    }   
+        
+}
+}
+@media screen and (min-width: 300px) and (max-width: 575px) {
+    .row{        
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        width: 100%;
+        align-items: center;
+        padding-top: $spacing-lg*3;
+    }
+    .form-inline {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+    }    
+    
+
+    .informacion__jumbotron{
+        height: auto;
+        width: 100%;
+        display: flex;
+        flex-direction: column;        
+        color: $black;
+        padding-bottom: $spacing*5;
+        align-items: center;
+        padding-top: $spacing-lg;
+        
+
+    }
+
+    .jumbotron__button{
+        width: auto;
+    }
+
+    .col-sm-7{
+        max-width: 80%;
+    }
+
+    .col-sm-4{
+
+        display: flex;
+        flex-direction:column;
+        width: 100%;
+        padding-top: $spacing-lg*2;        
+    }
+    .main .jumbotron__button{        
+        font-size: $f-large*2;    
+        width: auto;   
+    }
+
+    .main .informacion__jumbotron{
+        h1{font-size: $f-title;}
+        p{font-size: $f-large*2.5;}
+    }
+
+    .main .container__footer{
+        height: auto;
+        width: $full-width;
+        display: flex; 
+        flex-direction: column;                    
+        align-items: flex-end;        
+        background-color: $blue-dark;        
+        justify-content: flex-start;
+        padding-left: $spacing-lg*2.5;   
+        padding-top: $spacing-lg*2.5;  
+        padding-bottom: $spacing-lg*2;   
+        font-size: 5em;      
+        
+            .info__nombre h3{
+                font-size: $f-large*2.7;
+            }
+            .info__texto 
+           
+                p{                                       
+                padding-left: $spacing-lg;
+                
+            }
+
+    .redesSociales__logos{
+        display: flex;
+        flex-direction: row;
+    }      
+    .navbar__logo{
+        display: flex;
+        height: 22%;
+        width: 22%;
+        border-radius: 100%;
+
+    }  
+
+}
+}
+@media screen and (min-width: 576px) and (max-width: 991px){
+    .row{        
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        width: 100%;
+        align-items: center;
+        padding-top: $spacing-lg*3;
+    }
+
+    .col-sm-7{
+        max-width: 80%;
+    }
+    .col-sm-4 {
+        padding-top: $spacing-lg;
+        width: 100%;
+        max-width: 100%; 
+    }
+
+    .informacion__jumbotron{
+        height: auto;
+        width: 100%;
+        display: flex;
+        flex-direction: column;        
+        color: $black;
+        padding-bottom: $spacing;
+        align-items: center;
+        padding-top: $spacing-lg;
+        
+
+    }
+    .main .jumbotron__button{        
+        font-size: $f-large*2;
+        width: auto;
+               
+    }
+    
+    .main .informacion__jumbotron{
+        h1{font-size: $f-title;}
+        p{font-size: $f-large*2.6;}
+    }
+
+    .main .container__footer{
+        height: auto;
+        width: $full-width;
+        display: flex; 
+        flex-direction: column;                    
+        align-items: flex-end;        
+        background-color: $blue-dark;        
+        justify-content: flex-start;
+        padding-left: $spacing-lg*2.5;   
+        padding-top: $spacing-lg*2.5;  
+        padding-bottom: $spacing-lg*2;   
+        font-size: 5em;      
+        
+            .info__nombre h3{
+                font-size: $f-large*2.7;
+            }
+            .info__texto 
+           
+                p{                                       
+                padding-left: $spacing-lg;
+                
+            }
+
+    .redesSociales__logos{
+        display: flex;
+        flex-direction: row;
+    } 
+    .navbar__logo{
+        display: flex;
+        height: 14%;
+        width: 14%;
+        border-radius: 100%;
+
+    }  
+}
+}
+@media screen and (min-width: 992px) and (max-width: 1199px) {
+    .row{
+        
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        width: 100%;
+        align-items: center;
+        padding-top: $spacing-lg*3;
+    }
+
+    .col-sm-7{
+        max-width: 80%;
+    }
+    .col-sm-4 {
+        padding-top: $spacing-lg;
+        width: 100%;
+        max-width: 100%; 
+    }
+
+    .informacion__jumbotron{
+        height: auto;
+        width: 100%;
+        display: flex;
+        flex-direction: column;        
+        color: $black;
+        padding-bottom: $spacing*5;
+        align-items: center;
+        padding-top: $spacing-lg;
+        
+    }
+     
+    .main img {
+        height: 100%;
+        width: 100%;
+    }
+    .main .jumbotron__button{        
+        font-size: $f-large*2;
+        width: auto;
+               
+    }
+    
+    .main .informacion__jumbotron{
+        h1{font-size: $f-title;}
+        p{font-size: $f-large*1;}
+    }
+    .main .container__footer{
+        height: auto;
+        width: $full-width;
+        display: flex; 
+        flex-direction: column;                    
+        align-items: flex-end;        
+        background-color: $blue-dark;        
+        justify-content: flex-start;
+        padding-left: $spacing-lg*2.5;   
+        padding-top: $spacing-lg*2.5;  
+        padding-bottom: $spacing-lg*2;   
+        font-size: 5em;      
+        
+            .info__nombre h3{
+                font-size: $f-large*2.7;
+            }
+            .info__texto 
+           
+                p{                                       
+                padding-left: $spacing-lg;
+                
+            }
+
+    .redesSociales__logos{
+        display: flex;
+        flex-direction: row;
+    } 
+
+    .navbar__logo{
+        display: flex;
+        height: 12%;
+        width: 12%;
+        border-radius: 100%;
+
+    }  
+}
+    
+}
+@media screen and (min-width: 1200px){
+    
     .row{
         display: flex;
         flex-direction: row;
         justify-content: space-around;
         width: 100%;
-    }
-
-    .main .main__footer{
-        display: inline-flex;
-        flex-direction: row;
-        justify-content: space-evenly;
-
-        p{
-            padding: 0;
-            width: 80%;
-
-        }
-    }
-    
-    .footer__logoPieDePagina{
-        height: 50px ;
-    }
-    
-    .mapa__iframe{
-        width: 100% ;
+        align-items: center;
 
     }
 
-    .container__mapa{
+    .col-sm-5{
+        width: 80%;
+    }
+    .col-sm-4 {
+        padding-top: $spacing-lg;
         width: 100%;
+        max-width: 100%; 
     }
-    
-    .main__containerNosotros2{
+
+    .informacion__jumbotron{
+        height: auto;
         width: 100%;
-    }
-
-    .nav-item {
-
-        .dropdown{
         display: flex;
-        flex-direction: column ;
-        justify-content: flex-start;
-        width: 10% ;
-
-    }
-        .dropdown-menu.show{    
-            display: flex;
-            width: auto;
-            flex-direction: column;
-            align-items: flex-start;
-
-        }
-
-        a.nav-link {
-            color: #000;
-        }
-
+        flex-direction: column;        
+        color: $black;
+        padding-bottom: $spacing*5;
+        align-items: center;
+        padding-top: $spacing-lg;
         
-}
-    .main .jumbotron__texto{
-    width: 80%;
-    font-size: $f-large;
-    }
-}
 
-@media screen and (min-width: 768px) {
-    .container{
-        width: $container-md;
     }
+
+     
+    .main img {
+        height: 100%;
+        width: 100%;
+    }
+    .main .jumbotron__button{        
+        font-size: $f-large;
+        width: auto;
+               
+    }
+    
+    .main .informacion__jumbotron{
+        h1{font-size: $f-title/2;}
+        p{font-size: $f-large;}
+    }
+    .main .container__footer{
+        height: auto;
+        width: $full-width;
+        display: flex; 
+        flex-direction: row;                    
+        align-items: flex-end;        
+        background-color: $blue-dark;        
+        justify-content: flex-start;
+        padding-left: $spacing-lg*2.5;   
+        padding-top: $spacing-lg*2.5;  
+        padding-bottom: $spacing-lg*2;   
+        font-size: $spacing;      
+        
+            .info__nombre h3{
+                font-size: $f-large*2.7;
+            }
+            .info__texto 
+           
+                p{                                       
+                padding-left: $spacing-lg;
+                
+            }
+
+    .redesSociales__logos{
+        display: flex;
+        flex-direction: row;
+    } 
+    .navbar__logo{
+        display: flex;
+        height: 10%;
+        width: 10%;
+        border-radius: 100%;
+
+    }  
 }
-@media screen and (min-width: 992px) {
-    .container{
-        width: $container-lg;
-    }
-}
-@media screen and (min-width: 1200px) {
-    .container{
-        width: $container-xl;
-    }
-}
-@media screen and (min-width: 1400px) {
-    .container{
-        width: $container-xxl;
-    }
 }
