--- a/SASS/_navbar.scss
+++ b/SASS/_navbar.scss
@@ -2,16 +2,18 @@
 
       padding: 0;
       margin: 0;
+      color: $black;
 
 
     .navbar__logo{
 
-        display: inline-flex;
-        height: $spacing*4;
+        display: inline-flex;        
         border-radius: 100%;
         margin-left: $spacing-sm;
         margin: $spacing;        
         align-items: center;
+        
+        
     }
     
     li.nav-item.dropdown{
@@ -23,6 +25,7 @@
       width: auto;
       flex-direction: row;
       justify-content: flex-start;
+      color: $black;
     }
 
     .btn-outline-success{
@@ -37,16 +40,22 @@
     .navbar-brand{
       font-family: $f-family2;
       font-size: large;
+      color: $black;
     }
 
     .nav-link{
       font-family: $f-family2;
       font-size: large;
+      color: $black;
 
     }
 
-    .nav-link{
-      color: rgba($color: #000000, $alpha: 1.0) ;
+    a.dropdown-toggle{
+      font-family: $f-family2;
+      font-size: large;
+      color: $black ;
+      padding-top: $spacing-sm*1.3;
+      padding-left: $spacing-sm;
     }
 
 }
