--- a/SASS/_mediaQueries.scss
+++ b/SASS/_mediaQueries.scss
@@ -1,6 +1,5 @@
 @media screen and (max-width: 300px)  {
-    .row{
-        
+    .row{        
         display: flex;
         flex-direction: row;
         justify-content: space-around;
@@ -55,8 +54,8 @@
         height: auto;
         width: $full-width;
         display: flex; 
-        flex-direction: column;                    
-        align-items: flex-end;        
+        align-items: center;
+        flex-direction: column;       
         background-color: $blue-dark;        
         justify-content: flex-start;
         padding-left: $spacing-lg*2.5;   
@@ -69,7 +68,8 @@
             }
             .info__texto 
            
-                p{                                       
+                p{         
+                margin: $spacing-lg;                                  
                 padding-left: $spacing-lg;
                 
             }
@@ -77,15 +77,20 @@
     .redesSociales__logos{
         display: flex;
         flex-direction: row;
-    }       
+    } 
+
     .navbar__logo{
         display: flex;         
         width: $spacing-lg;    
         border-radius: 100%;
-        margin-bottom: $spacing-lg*5;
+        margin-bottom: $spacing-lg*3;
             img{
-                width: 60%;
+                height: 1em;
+                width: 1em;
+            
             }
+        
+            
 
     }   
     
@@ -156,7 +161,7 @@
         width: $full-width;
         display: flex; 
         flex-direction: column;                    
-        align-items: flex-end;        
+        align-items: center;        
         background-color: $blue-dark;        
         justify-content: flex-start;
         padding-left: $spacing-lg*2.5;   
@@ -169,7 +174,8 @@
             }
             .info__texto 
            
-                p{                                       
+                p{    
+                margin: $spacing-lg;                                    
                 padding-left: $spacing-lg;
                 
             }
@@ -239,7 +245,7 @@
         width: $full-width;
         display: flex; 
         flex-direction: column;                    
-        align-items: flex-end;        
+        align-items: center;        
         background-color: $blue-dark;        
         justify-content: flex-start;
         padding-left: $spacing-lg*2.5;   
@@ -252,7 +258,8 @@
             }
             .info__texto 
            
-                p{                                       
+                p{     
+                margin:$spacing-lg;                                  
                 padding-left: $spacing-lg;
                 
             }
@@ -262,10 +269,14 @@
         flex-direction: row;
     } 
     .navbar__logo{
+        a{
         display: flex;
         width: 60%;        
         border-radius: 100%;
         margin-bottom: $spacing-lg*4;
+
+        }
+        
 
     }  
 }
@@ -321,7 +332,7 @@
         width: $full-width;
         display: flex; 
         flex-direction: column;                    
-        align-items: flex-end;        
+        align-items: center;        
         background-color: $blue-dark;        
         justify-content: flex-start;
         padding-left: $spacing-lg*2.5;   
@@ -334,7 +345,8 @@
             }
             .info__texto 
            
-                p{                                       
+                p{   
+                padding: $spacing-lg;                                        
                 padding-left: $spacing-lg;
                 
             }
@@ -346,7 +358,7 @@
 
     .navbar__logo{
         display: flex;
-        width: 60%;
+        width: 80%;
         border-radius: 100%;
         margin-bottom: $spacing-lg*5;
 
@@ -407,7 +419,7 @@
         width: $full-width;
         display: flex; 
         flex-direction: row;                    
-        align-items: flex-end;        
+        align-items: center;        
         background-color: $blue-dark;        
         justify-content: flex-start;
         padding-left: $spacing-lg*2.5;   
@@ -422,6 +434,7 @@
            
                 p{                                       
                 padding-left: $spacing-lg;
+                margin: $spacing-lg;
                 
             }
 
@@ -430,10 +443,51 @@
         flex-direction: row;
     } 
     .navbar__logo{
-        display: flex;
-        height: 10%;
-        border-radius: 100%;
+            img{
+                width: 60%;
+            }
 
     }  
+
+    /* Inicio Tecnicas*/
+    
+    .tecnicas1__lista1 li {
+        display: flex;        
+        justify-content: center;
+        list-style: none;
+        font-size: $f-large;
+        font-family: "Kumbh Sans", sans-serif;
+        color: black;
+    }
+
+    .tecnicas1__table  {
+        display: flex;
+        justify-content: center;       
+        width: $full-width;
+        width: 60%;
+        background-color: green;
+            table{
+                background-color: green;
+            }
+    }
+    .tecnicas1__table th, td{
+        color: $black;   
+        display: table-cell;
+        border: $spacing-sm/2 $grey solid; 
+        text-align: start;
+        padding: $spacing-sm;
+            
+    }
+
+    .tecnicas1__table td, .table th {
+        padding: 0;
+        vertical-align: top; 
+        border-top: 1px solid $grey;
+        text-align: start;
+           
+    }
+      
+        
+    /* Final Tecnicas*/
 }
 }
